# perplexica-mcp

./: Cargo.toml  README.md
src/: main.rs  perplexica_service.rs
